--- a/style2pronv.css
+++ b/style2pronv.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: #ffffff;
+    background-color: #000000;
 }
 
 .container {
@@ -56,7 +56,7 @@ button {
     background-color: #641e0d; /* Cambia a otro color en hover, puedes ajustar el valor según tus preferencias */
 }
 .bg-green {
-    background-color: #ffffff; /* Nuevo color de fondo verde */
+    background-color: #000000; /* Nuevo color de fondo verde */
 }
 
 #messageContainer {
